tests/suppress_default/suppress_default.exp
Error ----------------------------------------------------------------------------------------------------- test.js:23:1

Cannot cast `3` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:23:1
   23| 3 as string;  // error
       ^ [1]

References:
   test.js:23:6
   23| 3 as string;  // error
            ^^^^^^ [2]



Found 1 error
